# ufps

./: .gitignore  Dockerfile.test  Makefile  README.md  docker-test.sh  download_models.py  install.py  pyproject.toml  test_install.py  test_install.sh  uninstall.py
ufps/: __init__.py  cli.py  core.py  interface.py  utils.py
