[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ufps"
version = "1.0.0"
description = "Ultra FPS Video Interpolation Tool - AI-powered frame rate enhancement"
readme = "README.md"
authors = [
    {name = "UFPS Contributors", email = "benjaminracicot@gmail.com"},
]
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "rich>=13.0.0",
    "questionary>=2.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "Pillow>=10.0.0",
    "tqdm>=4.65.0",
    "requests>=2.31.0",
    "packaging>=23.0",
]

[project.scripts]
ufps = "ufps.cli:main"

[project.urls]
"Homepage" = "https://github.com/benracicot/ufps"
"Bug Tracker" = "https://github.com/yourusername/ufps/issues"

[tool.setuptools]
packages = ["ufps"]

[tool.setuptools.package-data]
ufps = ["resources/*"]